Day 17 - Check In

--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 100L30D\n",
-    "![80%](https://progress-bar.dev/80?title=progress&width=100)\n",
+    "![81%](https://progress-bar.dev/81?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 100 Leetcode problems of varying difficulty in 30 days.<br>\n",
@@ -1008,7 +1008,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://tinyurl.com/vzGZfc\n"
+      "https://tinyurl.com/tUVIhZ\n"
      ]
     }
    ],
@@ -1775,7 +1775,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|###########################################################################################################| 362880/362880 [00:02<00:00, 134256.75it/s]\n"
+      "100%|#######################################################################| 362880/362880 [00:02<00:00, 131319.78it/s]\n"
      ]
     }
    ],
@@ -5363,9 +5363,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d23df28-c75e-40ad-82e1-83b4250b1d84",
+   "metadata": {},
+   "source": [
+    "## 81.\n",
+    "Date: 5th Jan 2024<br>\n",
+    "Medium Leetcode: longest-increasing-subsequence<br>\n",
+    "Solution: https://leetcode.com/problems/longest-increasing-subsequence/submissions/1137173478"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "87e073ad-3778-4fcc-b05c-37c4d7616e10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def lengthOfLIS(self, nums: List[int]) -> int:\n",
+    "\n",
+    "        # Time complexity - O(n^2)\n",
+    "        # Space complexity - On(n)\n",
+    "        \n",
+    "        n = len(nums)\n",
+    "        dp = [1] * n\n",
+    "\n",
+    "        for i in range(n - 2, -1, -1):\n",
+    "            curr = nums[i]\n",
+    "            maxLen = 0\n",
+    "            for j in range(i + 1, n):\n",
+    "                if nums[j] > curr:\n",
+    "                    maxLen = max(maxLen, dp[j])\n",
+    "            dp[i] = 1 + maxLen\n",
+    "\n",
+    "        return max(dp)\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().lengthOfLIS([10,9,2,5,3,7,101,18]) == 4\n",
+    "assert Solution().lengthOfLIS([0,1,0,3,2,3]) == 4\n",
+    "assert Solution().lengthOfLIS([7,7,7,7,7,7,7]) == 1\n",
+    "assert Solution().lengthOfLIS([1]) == 1\n",
+    "assert Solution().lengthOfLIS([2,1,3,1,4,1,5,1,6]) == 5"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87e073ad-3778-4fcc-b05c-37c4d7616e10",
+   "id": "52b07012-ad37-4f11-8124-932d8dbc2078",
    "metadata": {},
    "outputs": [],
    "source": []
