Day 17 - Check In - II

--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 100L30D\n",
-    "![81%](https://progress-bar.dev/81?title=progress&width=100)\n",
+    "![82%](https://progress-bar.dev/82?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 100 Leetcode problems of varying difficulty in 30 days.<br>\n",
@@ -1008,7 +1008,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://tinyurl.com/tUVIhZ\n"
+      "https://tinyurl.com/NeKvfE\n"
      ]
     }
    ],
@@ -1775,7 +1775,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|#######################################################################| 362880/362880 [00:02<00:00, 131319.78it/s]\n"
+      "100%|#######################################################################| 362880/362880 [00:02<00:00, 135478.97it/s]\n"
      ]
     }
    ],
@@ -5408,9 +5408,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a0dd579-e151-4ac1-8fd7-fee20b0a69e8",
+   "metadata": {},
+   "source": [
+    "## 82.\n",
+    "Date: 5th Jan 2024<br>\n",
+    "Medium Leetcode: count-square-submatrices-with-all-ones<br>\n",
+    "Solution: https://leetcode.com/problems/count-square-submatrices-with-all-ones/submissions/1137771502/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "ce80c239-3db0-4cde-bd13-c3face192507",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def countSquares(self, matrix: List[List[int]]) -> int:\n",
+    "        res = 0\n",
+    "        for i in range(len(matrix)):\n",
+    "            for j in range(len(matrix[0])):\n",
+    "                if matrix[i][j] != 0:\n",
+    "                    if i == 0 or j == 0:\n",
+    "                        res += 1\n",
+    "                    elif (matrix[i - 1][j] != 0 and matrix[i][j - 1] != 0 and matrix[i - 1][j - 1] != 0):\n",
+    "                        temp = min(matrix[i - 1][j], matrix[i][j - 1], matrix[i - 1][j - 1])\n",
+    "                        matrix[i][j] = temp + 1\n",
+    "                        res += temp + 1\n",
+    "                    else:\n",
+    "                        res += 1\n",
+    "\n",
+    "        return res\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Solution().countSquares([[0,1,1],[1,1,1],[1,1,1]]) == 11\n",
+    "assert Solution().countSquares([[1,0,1],[1,1,1],[1,1,1]]) == 10\n",
+    "assert Solution().countSquares([[1,1,0],[1,1,1],[1,1,1]]) == 11\n",
+    "assert Solution().countSquares([[1,1,1],[0,1,1],[1,1,1]]) == 10\n",
+    "assert Solution().countSquares([[1,1,1],[1,0,1],[1,1,1]]) == 8\n",
+    "assert Solution().countSquares([[1,1,1],[1,1,0],[1,1,1]]) == 10\n",
+    "assert Solution().countSquares([[1,1,1],[1,1,1],[0,1,1]]) == 11\n",
+    "assert Solution().countSquares([[1,1,1],[1,1,1],[1,0,1]]) == 10\n",
+    "assert Solution().countSquares([[1,1,1],[1,1,1],[1,1,0]]) == 11"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52b07012-ad37-4f11-8124-932d8dbc2078",
+   "id": "33ba1858-013e-45cc-9f04-8218c839695f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5418,7 +5465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "708d9714-1557-47fb-b288-7963eb84ca52",
+   "id": "7d634318-c38b-4af2-b9ab-efb4583cbf07",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5426,7 +5473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2013102-167a-4af0-a5f2-b911de86e939",
+   "id": "5facb77a-0c1b-4284-877b-81ffc60582af",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5434,7 +5481,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ec5ed17-82b0-47a7-a087-698c93dd7c4b",
+   "id": "3ec9dec7-e3d6-4aaa-811d-36652244f769",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9bbd6ad-b0eb-48cc-b1ae-f28b0c28c537",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17fa6433-ed8e-4a03-832d-317321c945fe",
    "metadata": {},
    "outputs": [],
    "source": []
