Day 19 - Check In

--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 100L30D\n",
-    "![90%](https://progress-bar.dev/90?title=progress&width=100)\n",
+    "![96%](https://progress-bar.dev/96?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 100 Leetcode problems of varying difficulty in 30 days.<br>\n",
@@ -37,6 +37,7 @@
     "import random\n",
     "import string\n",
     "import tqdm\n",
+    "import bisect\n",
     "\n",
     "conn = sqlite3.connect(\":memory:\")\n",
     "\n",
@@ -1008,7 +1009,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://tinyurl.com/vNCYNf\n"
+      "https://tinyurl.com/wOiapJ\n"
      ]
     }
    ],
@@ -1775,7 +1776,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|#######################################################################| 362880/362880 [00:02<00:00, 142095.72it/s]\n"
+      "100%|#######################################################################| 362880/362880 [00:01<00:00, 264379.31it/s]\n"
      ]
     }
    ],
@@ -5926,41 +5927,390 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c750f014-386b-4f32-882d-884b5c7b6e30",
+   "metadata": {},
+   "source": [
+    "## 91.\n",
+    "Date: 7th Jan 2024<br>\n",
+    "Hard Leetcode: maximum-profit-in-job-scheduling<br>\n",
+    "Solution: https://leetcode.com/problems/maximum-profit-in-job-scheduling/submissions/1139032071/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "b6b570ee-983d-4bf3-8a27-6d2e826ac214",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def jobScheduling(self, startTime: List[int], endTime: List[int], profit: List[int]) -> int:\n",
+    "\n",
+    "        n = len(startTime)\n",
+    "        startTime, endTime, profit = zip(*sorted(zip(startTime, endTime, profit), key=lambda x: x[0]))\n",
+    "\n",
+    "        @functools.lru_cache\n",
+    "        def backtrack(curr: int = 0, prev: int = None) -> int:\n",
+    "            # Base case\n",
+    "            if curr >= n:\n",
+    "                return 0\n",
+    "\n",
+    "            else:\n",
+    "                # If we choose to pick the current job\n",
+    "                if prev is None or endTime[prev] <= startTime[curr]:\n",
+    "                    pick = profit[curr] + backtrack(curr + 1, curr)\n",
+    "                else:\n",
+    "                    pick = 0\n",
+    "\n",
+    "                # If we choose not to pick the current job\n",
+    "                nopick = backtrack(curr + 1, prev)\n",
+    "                return max(pick, nopick)\n",
+    "\n",
+    "        return backtrack()\n",
+    "\n",
+    "    def jobScheduling(self, startTime: List[int], endTime: List[int], profit: List[int]) -> int:\n",
+    "        'https://leetcode.com/problems/maximum-profit-in-job-scheduling/solutions/409009/java-c-python-dp-solution/'\n",
+    "        jobs = sorted(zip(startTime, endTime, profit), key=lambda v: v[1])\n",
+    "        dp = [[0, 0]]\n",
+    "        for s, e, p in jobs:\n",
+    "            i = bisect.bisect(dp, [s + 1]) - 1\n",
+    "            if dp[i][1] + p > dp[-1][1]:\n",
+    "                dp.append([e, dp[i][1] + p])\n",
+    "        return dp[-1][1]\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().jobScheduling([24,24,7,2,1,13,6,14,18,24], [27,27,20,7,14,22,20,24,19,27], [6,1,4,2,3,6,5,6,9,8]) == 20\n",
+    "assert Solution().jobScheduling([848,586,593,909,163,129,685,481,258,764], [917,920,975,984,996,471,770,656,977,922], [48,72,37,67,72,46,54,37,53,30]) == 204"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc24d0b1-e48c-4abf-aa9c-3a2ec63d5a69",
+   "metadata": {},
+   "source": [
+    "## 92.\n",
+    "Date: 7th Jan 2024<br>\n",
+    "Easy Leetcode: determine-color-of-a-chessboard-square<br>\n",
+    "Solution: https://leetcode.com/problems/determine-color-of-a-chessboard-square/submissions/1139164949/"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fc18b71f-db83-465e-8570-ea42ce08f291",
+   "execution_count": 99,
+   "id": "9eda5233-5806-4e9b-8d97-1eb76338afae",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def squareIsWhite(coordinates: str) -> bool:\n",
+    "\n",
+    "       # Get the coords in integers \n",
+    "       x = ord(coordinates[0]) - 97\n",
+    "       y = int(coordinates[1])\n",
+    "\n",
+    "       return not (x + y) % 2\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution.squareIsWhite(\"a1\") == False\n",
+    "assert Solution.squareIsWhite(\"h3\") == True\n",
+    "assert Solution.squareIsWhite(\"c7\") == False"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d78bfe3-ef5c-4375-9c2e-4088f5de245b",
+   "cell_type": "markdown",
+   "id": "273edc0e-d309-4819-b323-eae9c483ca2d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 93.\n",
+    "Date: 7th Jan 2024<br>\n",
+    "Medium Leetcode: determine-color-of-a-chessboard-square<br>\n",
+    "Solution: https://leetcode.com/problems/minimum-moves-to-capture-the-queen/submissions/1139194482/"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "3d9d1d72-e750-4790-8747-15c95d81b0fd",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rook has hit the Bishop\n",
+      "Rook has hit the Queen\n",
+      "*   #   *   #   *   #   *   #   \n",
+      "#   *   #   *   #   *   #   *   \n",
+      "*   #   *   #   *   #   *   #   \n",
+      "#   *   #   *   #   *   #   *   \n",
+      "*   #   *   #   *   #   *   #   \n",
+      "#   *   Q   *   #   B   #   R   \n",
+      "*   #   *   #   *   #   *   #   \n",
+      "#   *   #   *   #   *   #   *   \n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def minMovesToCaptureTheQueen(a: int, b: int, c: int, d: int, e: int, f: int) -> int:\n",
+    "        # Answer can be 1, 2, or 3\n",
+    "        # Min(bishop moves, rook moves)\n",
+    "        rook, bishop, queen = (a - 1, b - 1), (c - 1, d - 1), (e - 1, f - 1)\n",
+    "\n",
+    "        # Directions to move\n",
+    "        bishop_dirs = [(1, 1), (-1, -1), (1, -1), (-1, 1)]\n",
+    "        rook_dirs = [(1, 0), (0, 1), (-1, 0), (0, -1)]\n",
+    "\n",
+    "        # Move bishop\n",
+    "        for direction in bishop_dirs:\n",
+    "            curr = bishop\n",
+    "            hit_rook = False\n",
+    "            while 0 <= curr[0] <= 7 and 0 <= curr[1] <= 7:\n",
+    "                curr = (curr[0] + direction[0], curr[1] + direction[1])\n",
+    "                if curr == queen:\n",
+    "                    print (\"Bishop has hit the Queen\")\n",
+    "                    if not hit_rook:\n",
+    "                        return 1\n",
+    "                    else:\n",
+    "                        return 2 # Rook can capture in 2 moves\n",
+    "                if curr == rook:\n",
+    "                    print (\"Bishop has hit the Rook\")\n",
+    "                    hit_rook = True\n",
+    "\n",
+    "\n",
+    "        # Move rook\n",
+    "        for direction in rook_dirs:\n",
+    "            curr = rook\n",
+    "            hit_bishop = False\n",
+    "            while 0 <= curr[0] <= 7 and 0 <= curr[1] <= 7:\n",
+    "                curr = (curr[0] + direction[0], curr[1] + direction[1])\n",
+    "                if curr == queen:\n",
+    "                    print (\"Rook has hit the Queen\")\n",
+    "                    if not hit_bishop:\n",
+    "                        return 1\n",
+    "                    else:\n",
+    "                        # Rook on its own would take 3 moves, however bishop can move outwards and let rook cut \n",
+    "                        # So result is always 2\n",
+    "                        return 2\n",
+    "\n",
+    "                if curr == bishop:\n",
+    "                    print (\"Rook has hit the Bishop\")\n",
+    "                    hit_bishop = True\n",
+    "\n",
+    "        return 2\n",
+    "\n",
+    "    def showBoard(a, b, c, d, e, f, *, empty_spaces=1):\n",
+    "        \n",
+    "        rook, bishop, queen = (a - 1, b - 1), (c - 1, d - 1), (e - 1, f - 1)\n",
+    "        for i in range(8):\n",
+    "            for j in range(8):\n",
+    "                if (i, j) == rook:\n",
+    "                    print (\"R\", end=\" \"*empty_spaces)\n",
+    "                elif (i, j) == bishop:\n",
+    "                    print (\"B\", end=\" \"*empty_spaces)\n",
+    "                elif (i, j) == queen:\n",
+    "                    print(\"Q\", end=\" \"*empty_spaces)\n",
+    "                else:\n",
+    "                    print(\"#\" if (i + j) % 2 else \"*\", end=\" \"*empty_spaces)\n",
+    "\n",
+    "            print()\n",
+    "\n",
+    "# Test the solution\n",
+    "# assert Solution.minMovesToCaptureTheQueen(5, 3, 3, 4, 5, 2) == 1\n",
+    "# assert Solution.minMovesToCaptureTheQueen(a=1, b=1, c=8, d=8, e=2, f=3) == 2\n",
+    "temp = [6, 8, 6, 6, 6, 3]\n",
+    "assert Solution.minMovesToCaptureTheQueen(*temp) == 2\n",
+    "Solution.showBoard(*temp, empty_spaces=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8b79e97-b5e0-4e11-bf02-63dc4753b15a",
+   "metadata": {},
+   "source": [
+    "## 94.\n",
+    "Date: 7th Jan 2024<br>\n",
+    "Hard Leetcode: arithmetic-slices-ii-subsequence<br>\n",
+    "Solution: https://leetcode.com/problems/arithmetic-slices-ii-subsequence/submissions/1139335916"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "ffd56be7-c81f-44be-89df-bd746eaeb727",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def numberOfArithmeticSlices(self, nums: List[int]) -> int:\n",
+    "\n",
+    "        @functools.cache\n",
+    "        def countArithmeticSlices(currIdx: int, diff: int) -> int:\n",
+    "\n",
+    "            curr, nextNum = nums[currIdx], nums[currIdx] + diff\n",
+    "            count = 0\n",
+    "\n",
+    "            if nextNum in hashmap:\n",
+    "                nextIdx = hashmap[nextNum]\n",
+    "                if type(nextIdx) == int and nextIdx > currIdx:\n",
+    "                    count += 1 + countArithmeticSlices(nextIdx, diff)\n",
+    "                elif type(nextIdx) == list:\n",
+    "                    for i in filter(lambda x: x > currIdx, nextIdx):\n",
+    "                        if curr + diff == nums[i]:\n",
+    "                            count += 1 + countArithmeticSlices(i, diff)\n",
+    "\n",
+    "            return count\n",
+    "\n",
+    "        n = len(nums)\n",
+    "        result = 0\n",
+    "        hashmap = dict()\n",
+    "        for k, v in enumerate(nums):\n",
+    "            if v not in hashmap:\n",
+    "                hashmap[v] = k\n",
+    "            else: \n",
+    "                hashmap[v] = [hashmap[v], k] if type(hashmap[v]) == int else [*hashmap[v], k]\n",
+    "\n",
+    "        for i in range(n):\n",
+    "            for j in range(i + 1, n):\n",
+    "                diff = nums[j] - nums[i]\n",
+    "                result += countArithmeticSlices(j, diff)\n",
+    "        return result\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().numberOfArithmeticSlices(list(range(1000))) == 2781846\n",
+    "assert Solution().numberOfArithmeticSlices([3,6,9,12,15,2,4,8,10,10,10,10,10]) == 28\n",
+    "assert Solution().numberOfArithmeticSlices([7,7,7,7,7]) == 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6572f414-ed4e-4b4a-a778-3a63600881ee",
+   "metadata": {},
+   "source": [
+    "## 95.\n",
+    "Date: 7th Jan 2024<br>\n",
+    "Easy Leetcode: assign-cookies<br>\n",
+    "Solution: https://leetcode.com/problems/assign-cookies/submissions/1139397548/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "cf76c2f2-eeed-4ecf-8a3b-f0c4a68f3d56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findContentChildren(self, g: List[int], s: List[int]) -> int:\n",
+    "\n",
+    "        g.sort()\n",
+    "        s.sort()\n",
+    "\n",
+    "        # 2 pointers\n",
+    "        gi = si = 0\n",
+    "\n",
+    "        satisifed = 0\n",
+    "        while si < len(s) and gi < len(g):\n",
+    "            if s[si] >= g[gi]:\n",
+    "                gi += 1\n",
+    "                satisifed += 1\n",
+    "            si += 1\n",
+    "\n",
+    "        return satisifed\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().findContentChildren([1, 2, 3], [1, 1]) == 1\n",
+    "assert Solution().findContentChildren([1, 2], [1, 2, 3]) == 2\n",
+    "assert Solution().findContentChildren([10,9,8,7], [5,6,7,8]) == 2\n",
+    "assert Solution().findContentChildren([10,15,20], [5,5,5,5,5,5]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7ad685f-96d5-4bc6-b979-55e7fc2d9b96",
+   "metadata": {},
+   "source": [
+    "## 96.\n",
+    "Date: 7th Jan 2024<br>\n",
+    "Medium Leetcode: 3sum<br>\n",
+    "Solution: https://leetcode.com/problems/3sum/submissions/1139496979"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "c2ec4fe9-53c4-4274-83bd-059fb21153d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def threeSum_(self, nums: List[int]) -> List[List[int]]:\n",
+    "        hashmap = dict()\n",
+    "        for i, n in enumerate(nums):\n",
+    "            indices = hashmap.get(n, set())\n",
+    "            indices.add(i)\n",
+    "            hashmap[n] = indices\n",
+    "\n",
+    "        i = 0\n",
+    "        j = len(nums) - 1\n",
+    "\n",
+    "        solutions = set()\n",
+    "        for i, j in itertools.combinations(range(len(nums)), r=2):\n",
+    "                \n",
+    "            partial_sum = nums[i] + nums[j]\n",
+    "            target = - partial_sum\n",
+    "\n",
+    "            indices = hashmap.get(target, set())\n",
+    "            \n",
+    "            idx = None\n",
+    "            for idx in indices:\n",
+    "                if idx != i and idx != j:\n",
+    "                    break\n",
+    "                else:\n",
+    "                    idx = None\n",
+    "                    \n",
+    "            if idx:\n",
+    "                solution = (nums[i], nums[j], nums[idx])\n",
+    "                solutions.add(tuple(sorted(solution)))\n",
+    "\n",
+    "        return solutions\n",
+    "\n",
+    "    def threeSum(self, nums: List[int]) -> List[List[int]]:\n",
+    "        \n",
+    "        # Sort the array\n",
+    "        nums.sort()\n",
+    "        n = len(nums)\n",
+    "        solutions = []\n",
+    "\n",
+    "        i = 0\n",
+    "        while i <= n - 3:\n",
+    "            j = i + 1\n",
+    "            k = n - 1\n",
+    "            while j < k:\n",
+    "                total = nums[i] + nums[j] + nums[k]\n",
+    "                if total == 0:\n",
+    "                    solutions.append([nums[i], nums[j], nums[k]])\n",
+    "                    j += 1\n",
+    "                    k -= 1\n",
+    "                elif total < 0:\n",
+    "                    j += 1\n",
+    "                else:\n",
+    "                    k -= 1\n",
+    "                    \n",
+    "            i += 1\n",
+    "            \n",
+    "        return set(map(lambda x: tuple(sorted(x)), solutions))\n",
+    "\n",
+    "# Test the solution\n",
+    "temp = [1,-2,2,5,3,0,0,1,2,-4,4]\n",
+    "assert Solution().threeSum(temp) == Solution().threeSum_(temp)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67c3d383-248e-4163-b244-cbea07cf7238",
+   "id": "7e5d2a3b-5c1e-4a8e-8253-559e478b6906",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5968,7 +6318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80e4df08-b851-4ae2-acf0-3527ae8dc503",
+   "id": "f2195972-46ce-402d-a58c-76e51960f529",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5976,7 +6326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9bbd6ad-b0eb-48cc-b1ae-f28b0c28c537",
+   "id": "5cb26294-e715-4e4e-af91-38f4fb8e0e26",
    "metadata": {},
    "outputs": [],
    "source": []
