Day 20 Check In - Challenge Complete

--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 100L30D\n",
-    "![96%](https://progress-bar.dev/96?title=progress&width=100)\n",
+    "![100%](https://progress-bar.dev/100?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 100 Leetcode problems of varying difficulty in 30 days.<br>\n",
@@ -14,7 +14,8 @@
     "\n",
     "#### Timelines:\n",
     "- Start Date: 20th Dec 2023\n",
-    "- Challenge End Date: 19th Jan 2023"
+    "- Challenge End Date: 19th Jan 2023\n",
+    "- Completed on: 8th Jan 2023"
    ]
   },
   {
@@ -1009,7 +1010,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://tinyurl.com/wOiapJ\n"
+      "https://tinyurl.com/KMUAjj\n"
      ]
     }
    ],
@@ -1776,7 +1777,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|#######################################################################| 362880/362880 [00:01<00:00, 264379.31it/s]\n"
+      "100%|#######################################################################| 362880/362880 [00:02<00:00, 136510.49it/s]\n"
      ]
     }
    ],
@@ -6308,17 +6309,250 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5db1e2a7-bb7c-47d7-830e-c1e9bcdb8607",
+   "metadata": {},
+   "source": [
+    "## 97.\n",
+    "Date: 8th Jan 2024<br>\n",
+    "Easy Leetcode: contains-duplicate-ii<br>\n",
+    "Solution: https://leetcode.com/problems/contains-duplicate-ii/submissions/1139965212/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "7e5d2a3b-5c1e-4a8e-8253-559e478b6906",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def containsNearbyDuplicate(self, nums: List[int], k: int) -> bool:\n",
+    "        indices = dict()\n",
+    "        for i, n in enumerate(nums):\n",
+    "            if n not in indices:\n",
+    "                indices[n] = i\n",
+    "            else:\n",
+    "                last_idx = indices[n]\n",
+    "                if abs(last_idx - i) <= k:\n",
+    "                    return True\n",
+    "                else:\n",
+    "                    indices[n] = i\n",
+    "                    \n",
+    "        return False\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().containsNearbyDuplicate([1], 10) == False\n",
+    "assert Solution().containsNearbyDuplicate([1,0,1], 0) == False\n",
+    "assert Solution().containsNearbyDuplicate([1,1], 0) == False\n",
+    "assert Solution().containsNearbyDuplicate([1,1], 1) == True\n",
+    "assert Solution().containsNearbyDuplicate([1,0,0,1], 0) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "853d41bc-d832-4646-9058-7ae8a4cfdddb",
+   "metadata": {},
+   "source": [
+    "## 98.\n",
+    "Date: 8th Jan 2024<br>\n",
+    "Easy Leetcode: intersection-of-two-linked-lists/<br>\n",
+    "Solution: https://leetcode.com/problems/intersection-of-two-linked-lists/submissions/1139982107/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "f2195972-46ce-402d-a58c-76e51960f529",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def getIntersectionNode(self, headA: ListNode, headB: ListNode) -> ListNode:\n",
+    "\n",
+    "        # Time Complexity - O(M + N)\n",
+    "        # Space Complexity - O(1)\n",
+    "\n",
+    "        lengthA = lengthB = 0\n",
+    "\n",
+    "        curr = headA\n",
+    "        while curr:\n",
+    "            lengthA += 1\n",
+    "            curr = curr.next\n",
+    "\n",
+    "        curr = headB\n",
+    "        while curr:\n",
+    "            lengthB += 1\n",
+    "            curr = curr.next\n",
+    "\n",
+    "        skipA = max(lengthA - lengthB, 0)\n",
+    "        skipB = max(lengthB - lengthA, 0)\n",
+    "\n",
+    "        while skipA > 0:\n",
+    "            headA = headA.next\n",
+    "            skipA -= 1\n",
+    "\n",
+    "        while skipB > 0:\n",
+    "            headB = headB.next\n",
+    "            skipB -= 1\n",
+    "\n",
+    "        while headA and headB and headA != headB:\n",
+    "            headA = headA.next\n",
+    "            headB = headB.next\n",
+    "\n",
+    "        # Since the len is equal, headA would either be the pt of intersection or null\n",
+    "        return headA\n",
+    "\n",
+    "# Helper function to create the head nodes\n",
+    "def create_test(listA, listB, skipA):\n",
+    "    \n",
+    "    headA = ListNode.to_singly_linked_list(listA)\n",
+    "    headB = ListNode.to_singly_linked_list(listB)\n",
+    "    \n",
+    "    commonNode = headA\n",
+    "    while skipA > 0:\n",
+    "        commonNode = commonNode.next\n",
+    "        skipA -= 1\n",
+    "    \n",
+    "    curr = headB\n",
+    "    while curr.next:\n",
+    "        curr = curr.next\n",
+    "    \n",
+    "    curr.next = commonNode\n",
+    "    return headA, headB\n",
+    "\n",
+    "# Test the solution\n",
+    "temp = Solution().getIntersectionNode(*create_test([4,1,8,4,5], [5,6,1], 2))\n",
+    "assert temp and temp.to_list() == [8, 4, 5]\n",
+    "\n",
+    "temp = Solution().getIntersectionNode(ListNode.to_singly_linked_list([1,2,3]), ListNode.to_singly_linked_list([4,5]))\n",
+    "assert not temp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ad589a1-fa41-4fd5-8a60-cf36317d26c2",
+   "metadata": {},
+   "source": [
+    "## 99.\n",
+    "Date: 8th Jan 2024<br>\n",
+    "Medium Leetcode: permutations-ii<br>\n",
+    "Solution: https://leetcode.com/problems/permutations-ii/submissions/1140352989/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "ac53ac06-c91a-40e0-b771-1ea4cbb501e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2, 2), (2, 1, 2), (2, 2, 1)]"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def permuteUnique(self, nums: List[int]) -> List[List[int]]:\n",
+    "\n",
+    "        def permuteR(nums: list[int], size: int = None) -> List[List[int]]:\n",
+    "\n",
+    "            if size is None:\n",
+    "                size = len(nums)\n",
+    "\n",
+    "            if size == 0:\n",
+    "                return [tuple()]\n",
+    "\n",
+    "            results = []\n",
+    "            for n in set(nums):\n",
+    "                copy = list(nums)\n",
+    "                copy.remove(n)\n",
+    "                for result in permuteR(copy, size-1):\n",
+    "                    results.append((n,) + result)\n",
+    "\n",
+    "            return results\n",
+    "\n",
+    "        def permuteI(nums: list[int]) -> List[List[int]]:\n",
+    "\n",
+    "            results = {(nums[0],)}\n",
+    "            for n in nums[1:]:\n",
+    "                new_results = set()\n",
+    "                for result in results:\n",
+    "                    for i in range(len(result) + 1):\n",
+    "                        new_results.add(result[:i] + (n,) + result[i:])\n",
+    "                results = new_results\n",
+    "\n",
+    "            return list(results)\n",
+    "\n",
+    "        return permuteI(nums)\n",
+    "\n",
+    "# Test the solution\n",
+    "Solution().permuteUnique([1, 2, 2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c492bb1-b924-4f9a-b096-4a89ce260524",
+   "metadata": {},
+   "source": [
+    "## 100.\n",
+    "Date: 8th Jan 2024<br>\n",
+    "Medium Leetcode: group-anagrams<br>\n",
+    "Solution: https://leetcode.com/problems/group-anagrams/submissions/1140452313/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "8a1d9b6b-bfee-4c2c-84bb-49529e7f6464",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']]"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def shorten(s: str):\n",
+    "        counter = collections.Counter(s)\n",
+    "        result = []\n",
+    "        for i in range(97, 123):\n",
+    "            c = chr(i)\n",
+    "            if c in counter:\n",
+    "                result.append(f'{c}{counter[c]}')\n",
+    "\n",
+    "        return ''.join(result)\n",
+    "\n",
+    "    def groupAnagrams(self, strs: List[str]) -> List[List[str]]:\n",
+    "        groupings = dict()\n",
+    "        for s in strs:\n",
+    "            shorterned = Solution.shorten(s)\n",
+    "            group = groupings.get(shorterned, [])\n",
+    "            group.append(s)\n",
+    "            groupings[shorterned] = group\n",
+    "        return list(groupings.values())\n",
+    "\n",
+    "# Test the solution\n",
+    "Solution().groupAnagrams([\"eat\",\"tea\",\"tan\",\"ate\",\"nat\",\"bat\"])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2195972-46ce-402d-a58c-76e51960f529",
+   "id": "e3dcde2e-cd51-40f0-b740-903aa0647c3a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6326,7 +6560,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cb26294-e715-4e4e-af91-38f4fb8e0e26",
+   "id": "fafa6482-5c38-498d-a7b1-d335042aeca3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "169a1419-4ff8-431b-9c76-3e3143361725",
    "metadata": {},
    "outputs": [],
    "source": []
