--- a/100L30D.ipynb
+++ b/100L30D.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "#### Timelines:\n",
     "- Start Date: 20th Dec 2023\n",
-    "- Challenge End Date: 19th Jan 2023\n",
+    "- Challenge End Date: 19th Jan 2024\n",
     "- Completed on: 8th Jan 2023"
    ]
   },
@@ -6550,20 +6550,75 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3dcde2e-cd51-40f0-b740-903aa0647c3a",
+   "cell_type": "markdown",
+   "id": "d879b4e7-ea3f-4e11-9c08-1d731cca33b1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 101.\n",
+    "Date: 9th Jan 2024<br>\n",
+    "Medium Leetcode: can-i-win<br>\n",
+    "Solution: "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fafa6482-5c38-498d-a7b1-d335042aeca3",
+   "execution_count": 63,
+   "id": "e3dcde2e-cd51-40f0-b740-903aa0647c3a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[63], line 34\u001b[0m\n\u001b[1;32m     31\u001b[0m                 \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;66;03m# Testing the solution\u001b[39;00m\n\u001b[0;32m---> 34\u001b[0m \u001b[43mSolution\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcanIWin\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m209\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[63], line 28\u001b[0m, in \u001b[0;36mSolution.canIWin\u001b[0;34m(self, maxChoosableInteger, desiredTotal, pool)\u001b[0m\n\u001b[1;32m     26\u001b[0m     updated_pool \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m\u001b[38;5;241m.\u001b[39mdifference(pool, {n})\n\u001b[1;32m     27\u001b[0m     updated_max \u001b[38;5;241m=\u001b[39m maxChoosableInteger \u001b[38;5;28;01mif\u001b[39;00m maxChoosableInteger \u001b[38;5;129;01min\u001b[39;00m updated_pool \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mmax\u001b[39m(updated_pool)\n\u001b[0;32m---> 28\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcanIWin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mupdated_max\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdesiredTotal\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mupdated_pool\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m     29\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m: \u001b[38;5;66;03m# Opp wins in every path\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[63], line 28\u001b[0m, in \u001b[0;36mSolution.canIWin\u001b[0;34m(self, maxChoosableInteger, desiredTotal, pool)\u001b[0m\n\u001b[1;32m     26\u001b[0m     updated_pool \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m\u001b[38;5;241m.\u001b[39mdifference(pool, {n})\n\u001b[1;32m     27\u001b[0m     updated_max \u001b[38;5;241m=\u001b[39m maxChoosableInteger \u001b[38;5;28;01mif\u001b[39;00m maxChoosableInteger \u001b[38;5;129;01min\u001b[39;00m updated_pool \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mmax\u001b[39m(updated_pool)\n\u001b[0;32m---> 28\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcanIWin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mupdated_max\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdesiredTotal\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mupdated_pool\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m     29\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m: \u001b[38;5;66;03m# Opp wins in every path\u001b[39;00m\n",
+      "    \u001b[0;31m[... skipping similar frames: Solution.canIWin at line 28 (16 times)]\u001b[0m\n",
+      "Cell \u001b[0;32mIn[63], line 28\u001b[0m, in \u001b[0;36mSolution.canIWin\u001b[0;34m(self, maxChoosableInteger, desiredTotal, pool)\u001b[0m\n\u001b[1;32m     26\u001b[0m     updated_pool \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m\u001b[38;5;241m.\u001b[39mdifference(pool, {n})\n\u001b[1;32m     27\u001b[0m     updated_max \u001b[38;5;241m=\u001b[39m maxChoosableInteger \u001b[38;5;28;01mif\u001b[39;00m maxChoosableInteger \u001b[38;5;129;01min\u001b[39;00m updated_pool \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mmax\u001b[39m(updated_pool)\n\u001b[0;32m---> 28\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcanIWin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mupdated_max\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdesiredTotal\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mupdated_pool\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m     29\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m: \u001b[38;5;66;03m# Opp wins in every path\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[63], line 9\u001b[0m, in \u001b[0;36mSolution.canIWin\u001b[0;34m(self, maxChoosableInteger, desiredTotal, pool)\u001b[0m\n\u001b[1;32m      7\u001b[0m     cumTotal \u001b[38;5;241m=\u001b[39m (maxChoosableInteger \u001b[38;5;241m*\u001b[39m (maxChoosableInteger \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m)) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m----> 9\u001b[0m     cumTotal \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpool\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m desiredTotal \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m maxChoosableInteger:\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "\n",
+    "    def canIWin(self, maxChoosableInteger: int, desiredTotal: int, pool: set[int] = None) -> bool:\n",
+    "\n",
+    "        if not pool:\n",
+    "            pool = set(range(1, maxChoosableInteger + 1))\n",
+    "            cumTotal = (maxChoosableInteger * (maxChoosableInteger + 1)) / 2\n",
+    "        else:\n",
+    "            cumTotal = sum(pool)\n",
+    "\n",
+    "        if desiredTotal <= maxChoosableInteger:\n",
+    "            return True\n",
+    "        elif desiredTotal > cumTotal:\n",
+    "            return False\n",
+    "        elif desiredTotal == maxChoosableInteger + 1:\n",
+    "            return False\n",
+    "        elif (desiredTotal - maxChoosableInteger - 1) in pool:\n",
+    "            return True\n",
+    "        elif desiredTotal == cumTotal:\n",
+    "            return True if len(pool) % 2 == 1 else False\n",
+    "        else:# 2 * maxChoosableInteger < desiredTotal < totalSum:\n",
+    "            # Try out scenarios with backtracking\n",
+    "            # Pick a number - check if for each number that the opp is left to choose they can only lose\n",
+    "            # If no such number exists, we can't force a win return False\n",
+    "            for n in pool:\n",
+    "                updated_pool = set.difference(pool, {n})\n",
+    "                updated_max = maxChoosableInteger if maxChoosableInteger in updated_pool else max(updated_pool)\n",
+    "                if not self.canIWin(updated_max, desiredTotal - n, updated_pool):\n",
+    "                    return True\n",
+    "            else: # Opp wins in every path\n",
+    "                return False\n",
+    "\n",
+    "# Testing the solution\n",
+    "Solution().canIWin(20, 209)"
+   ]
   },
   {
    "cell_type": "code",
@@ -6579,6 +6634,12 @@
    "id": "17fa6433-ed8e-4a03-832d-317321c945fe",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dc53243-7e47-4b6b-a35f-31e1a48d276e",
+   "metadata": {},
    "source": []
   }
  ],
