--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -5,11 +5,11 @@
    "id": "1025dedb-9729-4133-ba44-27e16b3f6d58",
    "metadata": {},
    "source": [
-    "# 100L30D\n",
-    "![10%](https://progress-bar.dev/10?title=progress&width=100)\n",
+    "# 75ML30D\n",
+    "![8%](https://progress-bar.dev/8?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
-    "- Solving 50 Medium Leetcode problems in 30 days.<br>\n",
+    "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
     "- Languange of choice: `Python`<br>\n",
     "\n",
     "#### Timelines:\n",
@@ -365,7 +365,7 @@
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def connect(self, root: 'Optional[Node]') -> 'Optional[Node]':\n",
+    "    def connect(self, root):\n",
     "        'This takes O(log(n)) space and O(1) complexity, q asked for O(1) space' \n",
     "\n",
     "        def backtrack(curr: Node, level: int = 0, right_most: dict = {}):\n",
@@ -445,12 +445,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "110efe35-0982-4f0e-8af5-8512b0352d68",
+   "metadata": {},
+   "source": [
+    "# 6. \n",
+    "Date: 11th Jan 2024<br>\n",
+    "Medium Leetcode: delete-the-middle-node-of-a-linked-list<br>\n",
+    "Solution: https://leetcode.com/problems/delete-the-middle-node-of-a-linked-list/submissions/1142953098"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c942014a-1091-436b-b5df-1bcc894052ed",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def deleteMiddle(self, head: ListNode) -> ListNode:\n",
+    "        'Better approach after seeing the solution is to use the fast pointer / slow pointer approach'\n",
+    "        n, curr = 0, head  \n",
+    "        while curr:\n",
+    "            curr = curr.next\n",
+    "            n += 1\n",
+    "\n",
+    "        mid = n // 2\n",
+    "\n",
+    "        if mid == 0:\n",
+    "            return None\n",
+    "\n",
+    "        prev, curr = None, head\n",
+    "        while mid > 0:\n",
+    "            prev, curr = curr, curr.next\n",
+    "            mid -= 1\n",
+    "\n",
+    "        prev.next = curr.next\n",
+    "        curr.next = None\n",
+    "        return head\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().deleteMiddle(ListNode.to_singly_linked_list([1])) is None\n",
+    "assert Solution().deleteMiddle(ListNode.to_singly_linked_list([1, 2])).to_list() == [1]\n",
+    "assert Solution().deleteMiddle(ListNode.to_singly_linked_list([1, 2, 3])).to_list() == [1, 3]\n",
+    "assert Solution().deleteMiddle(ListNode.to_singly_linked_list([1, 2, 3, 4])).to_list() == [1, 2, 4]"
+   ]
   },
   {
    "cell_type": "code",
