75ML30D - Day 4 - Check In

--- a/75ML30D.ipynb
+++ b/75ML30D.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# 75ML30D\n",
-    "![8%](https://progress-bar.dev/8?title=progress&width=100)\n",
+    "![11%](https://progress-bar.dev/11?title=progress&width=100)\n",
     "\n",
     "#### Description:\n",
     "- Solving 75 Medium Leetcode problems in 30 days.<br>\n",
@@ -492,9 +492,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d4a21654-0a35-4e54-bd4e-501c8ebb23aa",
+   "metadata": {},
+   "source": [
+    "# 7. \n",
+    "Date: 12th Jan 2024<br>\n",
+    "Medium Leetcode: find-minimum-in-rotated-sorted-array<br>\n",
+    "Solution: https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/submissions/1144294358/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a14acbbf-f095-4da8-8826-6c01f052715d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findMin(self, nums: List[int]) -> int:\n",
+    "        \"\"\"\n",
+    "        Objective is to find i such that nums[i] < nums[i - 1]\n",
+    "        \"\"\"\n",
+    "\n",
+    "        # O(1) time complexity\n",
+    "        n = len(nums)\n",
+    "\n",
+    "        # Edge case - 1\n",
+    "        if n == 1:\n",
+    "            return nums[0]\n",
+    "\n",
+    "        # Edge case - 2\n",
+    "        elif nums[0] < nums[-1]:\n",
+    "            return nums[0]\n",
+    "        \n",
+    "        else:\n",
+    "            start, end = 1, n - 1\n",
+    "            while start <= end:\n",
+    "                mid = (start + end) // 2\n",
+    "\n",
+    "                if nums[mid] < nums[mid - 1]:\n",
+    "                    return nums[mid]\n",
+    "                \n",
+    "                elif nums[mid] > nums[0]:\n",
+    "                    start = mid + 1\n",
+    "                \n",
+    "                else:\n",
+    "                    end = mid - 1\n",
+    "            return -1\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().findMin([4,5,6,7,0,1,2]) == 0\n",
+    "assert Solution().findMin([11,13,15,17]) == 11\n",
+    "assert Solution().findMin([2,3,5,6,7,1]) == 1\n",
+    "assert Solution().findMin([2,3,5,6,7,8,1]) == 1\n",
+    "assert Solution().findMin([6,7,8,1,2,3,4,5]) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df1a8479-2991-41c3-8d65-5a5533523e26",
+   "metadata": {},
+   "source": [
+    "# 8. \n",
+    "Date: 12th Jan 2024<br>\n",
+    "Medium Leetcode: count-and-say<br>\n",
+    "Solution: https://leetcode.com/problems/count-and-say/submissions/1144310034/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a005090c-c055-4f86-9958-5b18b6ebd019",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def countAndSay(self, n: int) -> str:\n",
+    "        def say(s: str):\n",
+    "            prev = None\n",
+    "            count = 0\n",
+    "            result = []\n",
+    "            for ch in s + \" \":\n",
+    "                if prev != ch:\n",
+    "                    if prev:\n",
+    "                        result.append(f\"{count}{prev}\")\n",
+    "                    prev, count = ch, 1\n",
+    "                else:\n",
+    "                    count += 1\n",
+    "                    \n",
+    "            return \"\".join(result)\n",
+    "\n",
+    "        curr = \"1\" \n",
+    "        while n > 1:\n",
+    "            curr = say(curr)\n",
+    "            n -= 1\n",
+    "\n",
+    "        return curr\n",
+    "\n",
+    "# Test the solution\n",
+    "assert Solution().countAndSay(10) == \"13211311123113112211\"\n",
+    "assert Solution().countAndSay(4) == \"1211\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a14acbbf-f095-4da8-8826-6c01f052715d",
+   "id": "30524e60-f5ad-4a37-a281-32c7d89619e0",
    "metadata": {},
    "outputs": [],
    "source": []
